fix(CheckoutForm): add dynamic gap

--- a/src/components/CheckoutForm/CheckoutForm.module.scss
+++ b/src/components/CheckoutForm/CheckoutForm.module.scss
@@ -46,7 +46,7 @@
     }
     .methodList {
       display: flex;
-      gap: 10px;
+      gap: var(--gap);
 
       .item {
         display: flex;
